# merge-com-server

./: .gitignore  server.sln
.aspire/: settings.json
server.AppHost/: AppHost.cs  server.AppHost.csproj
server.AppHost/Properties/: launchSettings.json
services/: README.md
services/dotnet-api/: Program.cs  README.md
services/go-fiber/: README.md  go.mod  go.sum
services/go-fiber/docs/: docs.go  swagger.json  swagger.yaml
services/nestjs-api/: package.json
services/nestjs-api/src/: app.controller.ts
services/notification/api/: Dockerfile
services/notification/api/e2e/: setup.ts
services/notification/api/src/: .example.env
services/notification/inbound-mail/: package.json
services/notification/libs/framework/: package.json
services/notification/libs/providers/: package.json
services/notification/worker/: Dockerfile
src/services/actix-web/: Cargo.toml  README.md
src/services/actix-web/src/: main.rs
src/services/dotnet-api/: Server.Api.csproj
src/services/dotnet-api/Controllers/: ApiController.cs
src/services/dotnet-api/Properties/: launchSettings.json
src/services/go-fiber/: main.go
src/services/nestjs-api/src/: app.service.ts  main.ts
src/services/notification/: Dockerfile  knip.json  nest-cli.json  package.json  project.json  tsconfig.build.json  tsconfig.json  tsconfig.spec.json
src/services/notification/api/: package.json
src/services/notification/e2e/: compile-email-template.e2e.ts  setup.ts
src/services/notification/inbound-mail/: Dockerfile
src/services/notification/keycloak/: notification-realm.json
(+3112 files in other folders)
