[package]
name = "actix_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

